# desktop-pet

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: windows-build.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  windows_support.rs
src/pets/: cat.js  goose.js  index.js
