[package]
name = "desktop-goose"
version = "0.1.0"
description = "A cozy desktop goose."
authors = ["yijia"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "desktop_goose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
