[package]
name = "desktop-pet"
version = "0.1.0"
description = "Cozy desktop companions."
authors = ["yijia"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-autostart = "2"

# Windows-only: query the global cursor position for the click-through hit-test.
[target.'cfg(target_os = "windows")'.dependencies]
device_query = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
